<resources>
    <string name="app_name">Quiz</string>
    <string name="txtUser">Enter your username:</string>
    <string name="userHint">[Username]</string>
    <string name="btnLogin" translatable="false">Login</string>
    <string name="numTests">Tests:</string>
    <string name="lastScore">Last score:</string>
    <string name="avgScore">Average:</string>
    <string name="btnStart">Start</string>
    <string name="btnNext">Next</string>
    <string name="options">Create/Questions/History</string>
    <string name="score">Score:</string>
    <string name="finish">Finish</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="alternatives">Alternatives:</string>
    <string name="quesHint">Enter your Question</string>
    <string name="answerHint">Enter the answer for your question</string>
    <string name="optA">Option A</string>
    <string name="optB">Option B</string>
    <string name="optC">Option C</string>
    <string name="addQuestion">Add Question</string>
    <string name="questions">Questions:</string>
    <string name="updateQuestion">Modify</string>
    <string name="deleteQuestion">Delete</string>
    <string name="close">Close</string>
    <string name="error">Error:</string>
</resources>
