<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guilh.myquizsqlite.AddQuestionActivity">

    <TextView
        android:text="@string/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/QuesTextView"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/QuesEditText"
        android:hint="@string/quesHint"
        android:textSize="18sp"
        android:layout_below="@+id/QuesTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/QuesEditText"
        android:layout_alignParentStart="true"
        android:id="@+id/answerTextView"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/answerTextView"
        android:layout_alignParentStart="true"
        android:id="@+id/answerEditText"
        android:hint="@string/answerHint" />

    <TextView
        android:text="@string/alternatives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerEditText"
        android:layout_alignParentStart="true"
        android:id="@+id/altTextView"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/altTextView"
        android:layout_alignParentStart="true"
        android:id="@+id/optaEditText"
        android:hint="@string/optA" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/optaEditText"
        android:layout_alignParentStart="true"
        android:id="@+id/optbEditText"
        android:hint="@string/optB" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/optbEditText"
        android:layout_alignParentStart="true"
        android:id="@+id/optcEditText"
        android:hint="@string/optC" />

    <Button
        android:text="@string/addQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
