<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guilh.myquizsqlite.HomeActivity">

    <TextView
        android:text="@string/numTests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/testsTextView"
        android:textSize="18sp"
        android:layout_alignParentStart="true" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/social_floating_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="#da3c2f"
        fab:menu_colorPressed="#dc4b3f"
        fab:menu_colorRipple="#99d4d4d4"
        fab:menu_fab_label="@string/options"
        fab:menu_fab_size="normal"
        fab:menu_icon="@android:drawable/ic_menu_edit"
        fab:menu_labels_colorNormal="#333"
        fab:menu_labels_colorPressed="#444"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#f2f1f1"
        fab:menu_labels_textSize="15sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66aff198"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="4dp"
        fab:menu_showShadow="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/testsTextView"
        android:layout_alignParentStart="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_recent_history"
            fab:fab_size="mini"
            fab:srcCompat="@android:drawable/ic_menu_recent_history" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_questionList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_agenda"
            fab:fab_size="mini"
            fab:srcCompat="@android:drawable/ic_menu_agenda" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_addQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_add"
            fab:fab_size="mini"
            fab:srcCompat="@drawable/fab_add" />

    </com.github.clans.fab.FloatingActionMenu>

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testsTextView"
        android:layout_alignParentStart="true"
        android:id="@+id/numTestsTextView"
        android:textSize="25sp" />

    <TextView
        android:text="@string/lastScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numTestsTextView"
        android:layout_alignParentStart="true"
        android:id="@+id/lastScoreTextView"
        android:textSize="18sp" />

    <TextView
        android:text="0.0%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastScoreTextView"
        android:layout_alignParentStart="true"
        android:id="@+id/numLastScoreTextView"
        android:textSize="25sp" />

    <TextView
        android:text="@string/avgScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numLastScoreTextView"
        android:layout_alignParentStart="true"
        android:id="@+id/avgTextView"
        android:textSize="18sp" />

    <TextView
        android:text="0.0%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avgTextView"
        android:layout_alignParentStart="true"
        android:id="@+id/numAvgScore"
        android:textSize="25sp" />

    <Button
        android:text="@string/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart"
        android:layout_marginTop="64dp"
        android:layout_alignTop="@+id/social_floating_menu"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
